<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BrowseActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbBrowse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageButton
            android:id="@+id/bBack"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_back"
            android:src="@drawable/ic_arrow_back"
            android:background="@color/transparent"
            android:layout_gravity="start|center_vertical"/>

        <ImageView
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_logo"
            style="@style/logo_tb"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbViewed"
                app:buttonTint="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_viewed"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/cbFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/white"
                android:button="@drawable/checkbox_favourite"/>
        </LinearLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srUpdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:flexWrap="wrap">

                    <androidx.cardview.widget.CardView
                        android:layout_width="200dp"
                        android:layout_height="280dp"
                        android:layout_gravity="top|center_horizontal"
                        app:cardCornerRadius="15dp"
                        android:layout_margin="15dp"
                        android:elevation="8dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center">

                            <ProgressBar
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true" />

                            <ImageView
                                android:id="@+id/ivPicture"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_centerInParent="true"
                                android:contentDescription="@string/cd_image"
                                android:scaleType="centerCrop" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="15dp">

                        <TextView
                            android:id="@+id/tvNameBrowse"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/app_name"
                            android:textSize="22sp"
                            android:fontFamily="@font/ubuntu_bold"/>

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            style="@style/divider"
                            android:layout_marginTop="15dp"
                            android:contentDescription="@string/cd_divider"/>

                        <TextView
                            android:id="@+id/tvType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_type"
                            android:fontFamily="@font/ubuntu_italic"
                            android:textSize="16sp"
                            android:layout_marginTop="15dp"/>

                        <TextView
                            android:id="@+id/tvEpisode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_episode"
                            android:fontFamily="@font/ubuntu_italic"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"/>

                        <TextView
                            android:id="@+id/tvGenre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_genre"
                            android:fontFamily="@font/ubuntu_italic"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"/>

                        <TextView
                            android:id="@+id/tvDuration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_duration"
                            android:fontFamily="@font/ubuntu_italic"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"/>

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_date"
                            android:fontFamily="@font/ubuntu_italic"
                            android:textSize="16sp"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </com.google.android.flexbox.FlexboxLayout>

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_description"
                    android:layout_margin="15dp"
                    android:fontFamily="@font/ubuntu_italic"
                    android:textSize="16sp" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="15dp"
                    app:flexWrap="wrap"
                    app:alignItems="center">

                    <TextView
                        android:id="@+id/tvTrailer"
                        android:fontFamily="@font/ubuntu_bold"
                        android:textSize="22sp"
                        android:layout_marginEnd="40dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|start"
                        android:text="@string/title_trailer" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bPlay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:text="@string/title_watch"
                        android:textColor="@color/white"
                        style="@style/txt"
                        android:textAllCaps="false"
                        app:cornerRadius="1000dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/bPlayWeb"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:foreground="@drawable/ic_open_in_web"
                        android:foregroundGravity="center"
                        android:foregroundTint="@color/white"
                        android:textAllCaps="false"
                        app:cornerRadius="1000dp" />
                </com.google.android.flexbox.FlexboxLayout>

                <com.google.android.youtube.player.YouTubePlayerView
                    android:id="@+id/ypvVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>